log
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_blocks/adders.cpp: In function ‘void instantiate_hard_adder(nnode_t*, short int, netlist_t*)’:
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_blocks/adders.cpp:204:2: warning: this condition has identical branches [-Wduplicated-branches]
  if (node->input_port_sizes[0] > node->input_port_sizes[1])
  ^~
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_blocks/adders.cpp: In function ‘void add_the_blackbox_for_adds(FILE*)’:
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_blocks/adders.cpp:267:3: warning: this condition has identical branches [-Wduplicated-branches]
   if (configuration.fixed_hard_adder != 0)
   ^~
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp: In function ‘void partial_map_node(nnode_t*, short int, netlist_t*)’:
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp:255:5: error: ‘instantiate_simple_soft_multiplier’ was not declared in this scope
     instantiate_simple_soft_multiplier(node, traverse_number, netlist);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_blocks/adders.cpp: In function ‘nnode_t* instantiate_add_w_carry_block(int*, nnode_t*, nnode_t*, int, short int, netlist_t*, int, short int)’:
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_blocks/adders.cpp:1493:8: warning: switch missing default case [-Wswitch-default]
  switch(my_type)
        ^
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp:255:5: note: suggested alternative: ‘instantiate_simple_soft_adder’
     instantiate_simple_soft_multiplier(node, traverse_number, netlist);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     instantiate_simple_soft_adder
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp: In function ‘void instantiate_add_w_carry(nnode_t*, short int, netlist_t*)’:
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp:814:108: error: cannot convert ‘adder_def_t* {aka adder_def_t_t*}’ to ‘int*’ for argument ‘1’ to ‘nnode_t* instantiate_add_w_carry_block(int*, nnode_t*, nnode_t*, int, short int, netlist_t*, int, short int)’
  instantiate_add_w_carry_block(definition, width, node, carry_node_in, start_pin, mark, netlist, counter, 0);
                                                                                                            ^
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp: In function ‘void instantiate_sub_w_carry(nnode_t*, short int, netlist_t*)’:
/workspace/vtr-verilog-to-routing/ODIN_II/SRC/lib_netlist/partial_map.cpp:851:108: error: cannot convert ‘adder_def_t* {aka adder_def_t_t*}’ to ‘int*’ for argument ‘1’ to ‘nnode_t* instantiate_add_w_carry_block(int*, nnode_t*, nnode_t*, int, short int, netlist_t*, int, short int)’
  instantiate_add_w_carry_block(definition, width, node, carry_node_in, start_pin, mark, netlist, counter, 1);
                                                                                                            ^
make[3]: *** [ODIN_II/CMakeFiles/odin_II.dir/build.make:674: ODIN_II/CMakeFiles/odin_II.dir/SRC/lib_netlist/partial_map.cpp.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/Makefile2:1264: ODIN_II/CMakeFiles/odin_II.dir/all] Error 2
make[1]: *** [Makefile:141: all] Error 2
make: *** [Makefile:45: all] Error 2
